# multi-cloud-cspm

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: security.yml  test.yml
docs/: architecture.md  compliance-coverage.md  security-decisions.md  setup.md
scripts/: auto_stop_compute.py  cleanup_aws_test_resources.py  demo.py  query_findings.py  run_scan.py  setup_aws_free_tier.py  test_remediation.py
src/cspm/: __init__.py
src/cspm/alerts/: __init__.py  channels.py  formatter.py  manager.py  models.py
src/cspm/cloud/: __init__.py  base.py
src/cspm/cloud/aws/: __init__.py
src/cspm/cloud/azure/: __init__.py
src/cspm/compliance/: __init__.py  engine.py  framework.py  mapper.py  reporting.py  scoring.py
src/cspm/compliance/controls/: __init__.py  aws.py  azure.py
src/cspm/core/: __init__.py  config.py  exceptions.py
src/cspm/database/: __init__.py  models.py  repository.py
src/cspm/ml/: __init__.py
src/cspm/remediation/: __init__.py  aws_actions.py  azure_actions.py  base.py  engine.py  registry.py
src/cspm/rules/: __init__.py  aws_rules.py  azure_rules.py  base.py  registry.py
src/cspm/rules/aws/: __init__.py
src/cspm/rules/azure/: __init__.py
src/cspm/scanner/: __init__.py  engine.py
src/cspm/testing/: __init__.py  safety.py
tests/: conftest.py  conftest_real.py
tests/integration/: test_alert_integration.py  test_compliance_integration.py  test_end_to_end_scan.py  test_multi_cloud_scan.py  test_remediation_integration.py
tests/real/: __init__.py  test_aws_compute.py  test_aws_free_tier.py  test_remediation_dryrun.py
tests/unit/: test_alert_channels.py  test_alert_formatter.py  test_alert_manager.py  test_alert_models.py  test_auto_stop.py  test_aws_provider.py  test_aws_remediation_actions.py  test_aws_rules.py  test_azure_provider.py  test_azure_remediation_actions.py  test_azure_resource_discovery.py  test_azure_rules.py  test_base_rule.py  test_compliance_engine.py  test_compliance_framework.py  test_compliance_mapper.py  test_compliance_scoring.py  test_remediation_base.py  test_remediation_engine.py  test_remediation_registry.py  test_safety_validators.py
